--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                         Major
                         AI
                         Stocks such
-                        as Microsoft and Nvidia have surged over <span class=" fw-medium gradient_text">80%</span> in the past year.
+                        as Microsoft and Nvidia have surged over <span class=" fw-medium gradient_text">80%</span> in
+                        the past year.
                         This
                         giants are
                         expected to grow
@@ -683,10 +684,11 @@
                 <div class="gradient-rightline"></div>
             </div>
             <div class="container">
-                <div class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-4 pt-xl-5">
+                <div
+                    class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-4 pt-xl-5">
                     <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
-                        <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Nvidia - AI GPU </br><span
-                                class="font-gradient">1 year 228%
+                        <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Nvidia - AI
+                            GPU </br><span class="font-gradient">1 year 228%
                             </span>Growth
                         </h2>
                         <p
@@ -758,7 +760,8 @@
                                     </div>
                                     <div
                                         class="col-xl-6 col-lg-6 col-12 d-flex justify-content-xl-end justify-content-center mt-lg-0 mt-sm-4 mt-3">
-                                        <from id="myForm" onsubmit="return validateForm() " class="popup_form formpopup_form">
+                                        <form id="myForm" onsubmit="return validateForm()"
+                                            class="popup_form formpopup_form">
                                             <p class="mb-4 pb-1 ff_opensans fw-bold off-black3 fs_4md lh_3xl">Start
                                                 Trading with
                                                 AI Stocks !</p>
@@ -767,30 +770,30 @@
                                                     <label
                                                         class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">First
                                                         Name</label>
-                                                    <input required type="text" id="popupfirstname"
+                                                    <input required type="text" id="firstname"
                                                         class="popup_input w-100 namepopup ff_opensans fw-normal fs_xs text-black lh-xs ">
                                                 </div>
                                                 <div class="d-flex flex-column mw_230 w-100">
                                                     <label
                                                         class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Last
                                                         Name</label>
-                                                    <input required type="text" id="popuplastname"
+                                                    <input required type="text" id="lastname"
                                                         class="popup_input lastnamepopup w-100 ff_opensans fw-normal fs_xs text-black lh-xs ">
                                                 </div>
                                             </div>
                                             <label
                                                 class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Email</label>
-                                            <input required type="email" id="popupemail"
+                                            <input required type="email" id="email"
                                                 class="popup_input emailpopup w-100 ff_opensans fw-normal mb-2 fs_xs text-black lh-xs ">
                                             <label
                                                 class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                                                 Number</label>
-                                            <input required type="number" id="popupphone"
+                                            <input required type="number" id="phone"
                                                 class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
-                                            <button  type="submit"
-                                                class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
+                                            <button type="submit" id="TopSubmitForm"
+                                                class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button submitTop_from popup-fromsubmisition">Start
                                                 Trading With [Nvidia]</button>
-                                                </from>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -845,7 +848,7 @@
                                     </div>
                                     <div
                                         class="col-xl-6 col-lg-6 col-12 d-flex justify-content-xl-end justify-content-center mt-lg-0 mt-sm-4 mt-3">
-                                        <from onsubmit="return microvalidateForm()" class="popup_form formpopup_form">
+                                        <from id="microForm" onsubmit="return " class="popup_form formpopup_form">
                                             <p class="mb-4 pb-1 ff_opensans fw-bold off-black3 fs_4md lh_3xl">Start
                                                 Trading with
                                                 AI Stocks !</p>
@@ -854,36 +857,38 @@
                                                     <label
                                                         class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">First
                                                         Name</label>
-                                                    <input required type="text" id="micropopupfirstname"
+                                                    <input required type="text" id="first_name"
                                                         class="popup_input w-100 namepopup ff_opensans fw-normal fs_xs text-black lh-xs ">
                                                 </div>
                                                 <div class="d-flex flex-column mw_230 w-100">
                                                     <label
                                                         class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Last
                                                         Name</label>
-                                                    <input required type="text" id="popuplastname"
+                                                    <input required type="text" id="last_name"
                                                         class="popup_input lastnamepopup w-100 ff_opensans fw-normal fs_xs text-black lh-xs ">
                                                 </div>
                                             </div>
                                             <label
                                                 class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Email</label>
-                                            <input required type="email" id="popupemail"
+                                            <input required type="email" id="user_email"
                                                 class="popup_input emailpopup w-100 ff_opensans fw-normal mb-2 fs_xs text-black lh-xs ">
                                             <label
                                                 class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                                                 Number</label>
-                                            <input required type="number" id="popupphone"
+                                            <input required type="number" id="user_phone"
                                                 class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                                             <button type="submit"
                                                 class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                                                 Trading With [Nvidia]</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 mt-5">
-                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Microsoft - Co-pilot
+                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Microsoft -
+                            Co-pilot
                             </br><span class="font-gradient">1 year 64%
                             </span>Growth
                         </h2>
@@ -908,7 +913,8 @@
                 <div
                     class="row align-items-center flex-lg-row pt-4 pt-md-2 mt-md-5 flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-5">
-                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Amazon AWS - AI
+                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Amazon AWS -
+                            AI
                               </br><span class="font-gradient">1 year 69%
                             </span>Growth
                         </h2>
@@ -1099,7 +1105,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 mt-5">
-                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Palantir - AI Analytics
+                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Palantir - AI
+                            Analytics
 
                             </br><span class="font-gradient">1 year 157%
                             </span>Growth
@@ -1125,7 +1132,8 @@
                 <div
                     class="row align-items-center flex-lg-row pt-4 pt-md-2 mt-md-5  flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-5">
-                        <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Crowd strike - Cyber
+                        <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Crowd strike
+                            - Cyber
 
                               </br><span class="font-gradient">1 year 156%
                             </span>Growth
@@ -1258,7 +1266,8 @@
 
                     </div>
                     <div class="col-lg-6 pt-5 mt-5">
-                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">UI Path - Robotic Automations
+                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">UI Path -
+                            Robotic Automations
                              
                             </br><span class="font-gradient">1 year 82%
                             </span>Growth
@@ -1354,7 +1363,8 @@
                 <div
                     class="row align-items-center flex-lg-row pt-md-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-lg-5 pt-5 mt-5">
-                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Arista Networks - </br>
+                        <h2 class="white text-lg-start text-center lh_5xl ff_opensans fw-bold mb-0 fs_6lg">Arista
+                            Networks - </br>
                             AI Cloud Computing
                               </br><span class="font-gradient">1 year 111% 
                             </span>Growth
@@ -1486,41 +1496,42 @@
             </p>
 
             <div class="d-flex justify-content-center pt-sm-4 pt-2">
-            <div class="position-relative d-inline-block">
-                <img class="how_work_roadmap_img" src="./assets/images/webp/blueroadmap.webp" alt="roadmapimg_img" />
-                <div class="position-absolute sign_up_position">
-                    <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_lg lh-5xxl  ">Sign
-                        up
-                    </h3>
-                    <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
-                        Fill out the Registration Form to Get Started.
-                    </p>
-                    <a href="#profit"
-                        class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
-                        Your account</a>
+                <div class="position-relative d-inline-block">
+                    <img class="how_work_roadmap_img" src="./assets/images/webp/blueroadmap.webp"
+                        alt="roadmapimg_img" />
+                    <div class="position-absolute sign_up_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_lg lh-5xxl  ">Sign
+                            up
+                        </h3>
+                        <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
+                            Fill out the Registration Form to Get Started.
+                        </p>
+                        <a href="#profit"
+                            class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
+                            Your account</a>
+                    </div>
+                    <div class="position-absolute verifaction_max_w verification_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_lg lh-5xxl ">Verification</h3>
+                        <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
+                            Schedule a Call with Our Verified AI Trading Mentors to Guide
+                            You Through Your Investment Journey
+                        </p>
+                        <a href="#profit"
+                            class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
+                            Your account</a>
+                    </div>
+                    <div class="position-absolute investing_position">
+                        <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_lg lh-5xxl ">
+                            Start Investing
+                        </h3>
+                        <p class="c-gray fw-normal mb-sm-2 pb-md-2 mb-1 ff_opensans fs_xs max-sm-fs-10 lh_md text_wrap">
+                            Begin shaping your financial future with confidence and ease.
+                        </p>
+                        <a href="#profit"
+                            class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
+                            Investing</a>
+                    </div>
                 </div>
-                <div class="position-absolute verifaction_max_w verification_position">
-                    <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_lg lh-5xxl ">Verification</h3>
-                    <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
-                        Schedule a Call with Our Verified AI Trading Mentors to Guide
-                        You Through Your Investment Journey
-                    </p>
-                    <a href="#profit"
-                        class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
-                        Your account</a>
-                </div>
-                <div class="position-absolute investing_position">
-                    <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_lg lh-5xxl ">
-                        Start Investing
-                    </h3>
-                    <p class="c-gray fw-normal mb-sm-2 pb-md-2 mb-1 ff_opensans fs_xs max-sm-fs-10 lh_md text_wrap">
-                        Begin shaping your financial future with confidence and ease.
-                    </p>
-                    <a href="#profit"
-                        class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
-                        Investing</a>
-                </div>
-            </div>
             </div>
         </div>
         <div class="ellipes-road-map-green-left d-md-block d-none"></div>
