--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@
                 <div class="gradient-rightline"></div>
             </div>
             <div class="container">
+                <!--=========first=========-->
                 <div
                     class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-4 pt-xl-5">
                     <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
@@ -708,7 +709,6 @@
                                 class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
                                 more</button>
                         </div>
-
                     </div>
                     <div class="col-lg-6 d-flex  justify-content-lg-start justify-content-center">
                         <div class=" position-relative z-3 ps-xl-5 ms-xl-3 d-flex ">
@@ -725,7 +725,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div id="popup" class="popup">
                             <div class=" z-3 bgpopup overflow-x-clip position-relative">
                                 <div class="popup-topright-ellipse "></div>
@@ -800,7 +799,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- ====second===== -->
+                <!-- ====second=====-->
                 <div class="row align-items-center pt-4 pt-md-2 mt-md-5  justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-md-5 d-flex   justify-content-center">
                         <div class=" position-relative  z-3 ">
@@ -880,7 +879,7 @@
                                             <button type="submit"
                                                 class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                                                 Trading With [Nvidia]</button>
-                                        </form>
+                                            </form>
                                     </div>
                                 </div>
                             </div>
@@ -2069,8 +2068,8 @@
                 </div>
                 <div class="col-12 col-lg-6 ">
                     <div class="d-flex justify-content-center justify-content-lg-end align-items-center">
-                        <div class="brandGroupwidth"><img class="w-100" src="./assets/images/webp/bradingLogo.webp"
-                                alt="logo brand"></div>
+                        <lottie-player src="./assets/json/1_6.json" speed="1" class="position-relative w-full"
+                            autoplay loop></lottie-player>
                     </div>
                 </div>
             </div>
@@ -2169,7 +2168,7 @@
     </script>
     <!-- LOTTIE PLAYER  -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player"></script>
     <script src="./assets/js/app.js"></script>
 </body>
 
