--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
                 <div
                     class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
                     <div class="col-xl-7 col-md-6 mt-4 mt-md-0 trade_leverage_parent px-lg-0 pe-0 ps-md-2 ps-0">
-                        <h2 class="ff_open_sans fw-bold fs_8xl leading_124 mb-0 text-white text-md-start text-center">
+                        <h2 class="ff_opensans fw-bold fs_8xl leading_124 mb-0 text-white text-md-start text-center">
                             <span class="gradient_text">Trade long</span> and short with
                             <span class="gradient_text"> leverage in CFDs </span>
                         </h2>
-                        <p class="fw-normal fs-sm text-white opacity_07 pt-3 text-md-start text-center">
+                        <p class="fw-normal ff_opensans fs-sm text-white opacity_07 pt-3 text-md-start text-center">
                             Stocks, Forex, Indices and more
                         </p>
                         <div
@@ -506,7 +506,7 @@
                             <div data-title="company"
                                 class="d-flex align-items-center gap-lg-5 gap-3 trade_line_first position-relative">
                                 <span onclick="changeImageHandler('company')"
-                                    class="trade_shares_btns trade_shares_active_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    class="trade_shares_btns ff_opensans trade_shares_active_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
                                     Choose your favorite asset
                                 </span>
                                 <span onclick="changeImageHandler('company')"
@@ -515,7 +515,7 @@
                             <div data-title="invest"
                                 class="d-flex align-items-center gap-lg-5 gap-3 trade_line_4th position-relative">
                                 <span onclick="changeImageHandler('invest')"
-                                    class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    class="trade_shares_btns ff_opensans leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
                                     Select how much to invest
                                 </span>
                                 <span onclick="changeImageHandler('invest')"
@@ -523,7 +523,7 @@
                             </div>
                             <div data-title="shares" class="d-flex align-items-center gap-lg-5 gap-3">
                                 <span onclick="changeImageHandler('shares')"
-                                    class="trade_shares_btns leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
+                                    class="trade_shares_btns ff_opensans leverage-tab d-flex align-items-center fw-bold cursior_pointer fs_md text-white ">
                                     Get your shares in seconds
                                 </span>
                                 <span onclick="changeImageHandler('shares')"
@@ -531,7 +531,7 @@
                             </div>
                         </div>
                         <a href="#profit"
-                            class="text-black linear_bg main-button fs_xs fw-bold ff_open_sans mt-md-2 d-md-inline-block d-none">Open
+                            class="text-black linear_bg main-button ff_opensans fs_xs fw-bold mt-md-2 d-md-inline-block d-none">Open
                             Your account</a>
                     </div>
                     <div class="col-lg-5 col-md-6 col-sm-8 px-lg-2 position-relative travel_phone_image">
@@ -551,7 +551,7 @@
                         <div class="phone_bubble linear_bg position-absolute top-50 start-50 translate-middle z-0">
                         </div>
                         <a href="#profit"
-                            class="text-black text-center main-button linear_bg fs_xs fw-bold ff_open_sans mt-4 d-block w-100 d-md-none">
+                            class="text-black text-center ff_opensans main-button linear_bg fs_xs fw-bold mt-4 d-block w-100 d-md-none">
                             Open Your account
                         </a>
                     </div>
