--- a/index18.html
+++ b/index18.html
@@ -37,7 +37,7 @@
 
       <div class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-5">
         <div class="col-lg-6  mt-lg-0 mt-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Nvidia - AI GPU </br><span
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Nvidia - AI GPU </br><span
               class="text_gradient2">1 year 228%
             </span>Growth
           </h2>
@@ -114,7 +114,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -186,7 +186,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -196,7 +196,7 @@
           </div>
         </div>
         <div class="col-lg-6 pt-5 mt-lg-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Microsoft - Co-pilot
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Microsoft - Co-pilot
             </br><span class="text_gradient2">1 year 64%
             </span>Growth
           </h2>
@@ -214,7 +214,7 @@
       <!-- ======third====== -->
       <div class="row align-items-center flex-lg-row pt-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
         <div class="col-lg-6 pt-lg-5 mt-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Amazon AWS - AI
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Amazon AWS - AI
               </br><span class="text_gradient2">1 year 69%
             </span>Growth
           </h2>
@@ -287,7 +287,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -359,7 +359,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -369,7 +369,7 @@
           </div>
         </div>
         <div class="col-lg-6 pt-lg-5 mt-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Palantir - AI Analytics
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Palantir - AI Analytics
 
             </br><span class="text_gradient2">1 year 157%
             </span>Growth
@@ -388,7 +388,7 @@
       <!-- =====fifth===== -->
       <div class="row align-items-center flex-lg-row pt-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
         <div class="col-lg-6 pt-5 mt-lg-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Crowd strike - Cyber
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Crowd strike - Cyber
 
               </br><span class="text_gradient2">1 year 156%
             </span>Growth
@@ -448,7 +448,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -495,8 +495,8 @@
 
         </div>
         <div class="col-lg-6 pt-lg-5 mt-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">UI Path - Robotic Automations
-             
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">UI Path - Robotic Automations
+        
             </br><span class="text_gradient2">1 year 82%
             </span>Growth
           </h2>
@@ -554,7 +554,7 @@
                   <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                     Number</label>
                   <input required type="number"
-                    class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                    class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                   <button type="submit"
                     class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                     Trading With [Nvidia]</button>
@@ -567,7 +567,7 @@
       <!-- ======seventh======== -->
       <div class="row align-items-center flex-lg-row pt-md-5 mt-md-5  flex-column-reverse justify-content-between pt-5">
         <div class="col-lg-6 pt-lg-5 pt-3 mt-5">
-          <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Arista Networks - </br>
+          <h2 class="white text-lg-start text-center fw-bold ff_opensans lh_5xl mb-0 fs_6lg">Arista Networks - </br>
             AI Cloud Computing
               </br><span class="text_gradient2">1 year 111% 
             </span>Growth
@@ -643,7 +643,7 @@
                     <label class="ff_opensans fw-normal fs_xs text-black lh-xs text-capitalize mb-2">Phone
                       Number</label>
                     <input required type="number"
-                      class="popup_input w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
+                      class="popup_input w-100 numberremove ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3">
                     <button type="submit"
                       class="ff_montserrat submitpopup fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button popup-fromsubmisition">Start
                       Trading With [Nvidia]</button>
@@ -653,8 +653,6 @@
           </div>
         </div>
       </div>
-    </div>
-    </div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
