--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
                                 Fill out the Registration Form to Get Started.
                             </p>
                             <a href="#profit"
-                                class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
+                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
                                 Your account</a>
                         </div>
                         <div class="position-absolute verifaction_max_w verification_position">
@@ -1539,7 +1539,7 @@
                                 You Through Your Investment Journey
                             </p>
                             <a href="#profit"
-                                class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
+                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
                                 Your account</a>
                         </div>
                         <div class="position-absolute investing_position">
@@ -1551,7 +1551,7 @@
                                 Begin shaping your financial future with confidence and ease.
                             </p>
                             <a href="#profit"
-                                class="text-white linear_bg_red max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
+                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
                                 Investing</a>
                         </div>
                     </div>
